src/tests/render_snapshots/snapshots/sabiql__render_snapshots__confirm_dialogs__confirm_dialog_update_preview_multi_column.snap
---
source: src/tests/render_snapshots/confirm_dialogs.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││Owner:   postgres                                                                                                         │
│  public.comments                      ││Comment: User accounts                                                                                                    │
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   users                                                                                                            │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││           ╭ Confirm UPDATE: users ───────────────────────────────────╮                                                   │
│                                       ││           │                                                          │                                                   │
│                                       ││           │ ✓ LOW RISK                                               │                                                   │
│                                       ││           │                                                          │                                                   │
│                                       ││           │ Diff                                                     │                                                   │
│                                       ││           │   email:                                                 │                                                   │
│                                       ││           │     - "bob@example.com"                                  │                                                   │
│                                       ││           │     + "new@example.com"                                  │                                                   │
│                                       │└───────────│                                                          │───────────────────────────────────────────────────┘
│                                       │┌ [3] Result│   name:                                                  │───────────────────────────────────────────────────┐
│                                       ││(select a t│     - "Bob"                                              │                                                   │
│                                       ││           │     + "New Name"                                         │                                                   │
│                                       ││           │                                                          │                                                   │
│                                       ││           │ SQL Preview                                              │                                                   │
│                                       ││           │   UPDATE "public"."users"                                │                                                   │
│                                       ││           │   SET "email" = 'new@example.com', "name" = 'New Name'   │                                                   │
│                                       ││           │   WHERE "id" = '2';                                      │                                                   │
│                                       ││           │                                                          │                                                   │
│                                       ││           ╰ Enter: Confirm │ Esc: Cancel ────────────────────────────╯                                                   │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
