src/tests/render_snapshots/snapshots/sabiql__render_snapshots__confirm_dialogs__confirm_dialog_update_preview_narrow_terminal.snap
---
source: src/tests/render_snapshots/confirm_dialogs.rs
expression: output
---
tes… ▸ … connected | localhost:5432/test
┌╭ Confirm UPDATE: users ─────────────╮]
││                                    │┐
││ ✓ LOW RISK                         ││
││                                    ││
││ Diff                               │┘
││   metadata:                        │┐
││     {                              ││
││   -   "company_size":              ││
││                                    ││
└╰ Enter: Confirm │ Esc: Cancel ──────╯┘
